# disclosure-extractor

./: CHANGES.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: lint.yml  tests.yml
disclosure_extractor/: __init__.py  analyze.py  calculate.py  data_processing.py  extractor_template.json  image_processing.py  investments_and_trusts.py  judicial_watch_utils.py  post_processing.py  template.json  template.py  utils.py
disclosure_extractor/jef/: extraction.py  filters.py  utils.py
tests/: tests.py
