[tool.black]
line-length = 79
include = '''.*\.pyi?$'''

[tool.poetry]
name = "disclosure-extractor"
version = "0.1.0"
description = ""
authors = ["William Palin <bill@free.law>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
chardet = "^4.0.0"
numpy = "^1.22.2"
opencv-python = "^4.5.5"
prettytable = "^3.1.1"
pandas = "^1.4.1"
Pillow = "^9.0.1"
PyPDF2 = "^1.26.0"
sortedcontainers = "2.2.2"
urllib3 = "1.25.10"
python-dateutil = "2.8.1"
six = "^1.16.0"
pdfplumber = "^0.6.0"
argcomplete = "1.10.0"
certifi = "2020.12.5"
idna = "2.10"
importlib-resources = "^5.4.0"
langdetect = "^1.0.9"
olefile = "0.46"
pathlib = "^1.0.1"
pdf2image = "^1.16.0"
pycryptodome = "3.9.8"
pytesseract = "0.3.5"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
